@@ -1735,11 +1735,11 @@ public class DataPointVO extends AbstractActionVO<DataPointVO> implements IDataP
             simplifyType = in.readInt();
             simplifyTolerance = in.readDouble();
             simplifyTarget = in.readInt();
-            
-            //Units no longer stored with text renderer
-            setUnitsOnTextRenderer();
         }
 
+        //Units no longer stored with text renderer
+        setUnitsOnTextRenderer();
+        
         // Check the purge type. Weird how this could have been set to 0.
         if (purgeType == 0)
             purgeType = Common.TimePeriods.YEARS;
@@ -1757,6 +1757,22 @@ public class DataPointVO extends AbstractActionVO<DataPointVO> implements IDataP
             }
             else {
                 cr.setRenderedUnit(unit);
+            }
+            //Ensure that we have a valid renderer configuration
+            //TODO Mango 3.7 defaultTextRenderer() calls this and for some reason
+            // doesn't require a point locator to be set
+            if(pointLocator != null) {
+                switch(pointLocator.getDataTypeId()) {
+                    case DataTypes.ALPHANUMERIC:
+                    case DataTypes.BINARY:
+                    case DataTypes.IMAGE:
+                    case DataTypes.MULTISTATE:
+                        //These types can't have a unit
+                        cr.setUseUnitAsSuffix(false);
+                    case DataTypes.NUMERIC:
+                    default:
+                        break;
+                }
             }
         }
     }
