@@ -1,6 +1,8 @@
 *Version 3.6.2*
 * Add public getter method for points list in DataSourceWrapper from DataSourceQuery
 * Improve memory use for quantized statistics, point value rollups for example use this
+* Fix bug where default Alphanumeric and Multistate templates prior to 3.6.0 had an invalid renderer configuration, no visual change in rendering will occur
+* Fix bug where non numeric data points created prior to 3.6.0 without a template could have an invalid renderer configuration, no visual change in rendering will occur
 
 *Version 3.6.1*
 * Fix small javascript bug on legacy system settings page where data source permissions were being set 2x
